--- a/Index.html
+++ b/Index.html
@@ -3,9 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>FSD</title>
+    <style>
+        td{
+                text-align: center;
+        }
+    </style>
 </head>
 <body>
-    
+    <table border="2" style="border: 2 px solid black;">
+        <tr>
+            <th rowspan="2">Day/Time</th>
+            <th>1</th>
+            <th>2</th>
+            <th>3</th>
+            <th>4</th>
+            <th>5</th>
+        </tr>
+        <tr>
+            <td>8:50-9:40</td>
+            <td>9:40-10:30</td>
+            <td>10:30-10:40</td>
+            <td>10:40-11:30</td>
+            <td>11:30-12:20</td>
+        </tr>
+        <tr>
+            <td>Monday</td>
+            <td>OOSDs</td>
+            <td>DBMS</td>
+            <td rowspan="5">Break</td>
+            <td>DAA</td>
+            <td>AOSC</td>
+        </tr>
+        <tr>
+            <td>Tuesday</td>
+            <td>C++</td>
+            <td>OOSDs</td>
+            <td>FSD</td>
+            <td>DSA</td>
+        </tr>
+        <tr>
+            <td>Wednesday</td>
+            <td>DBMS</td>
+            <td>DAA</td>
+            <td>AOSC</td>
+            <td>OOSDs</td>
+        </tr>
+        <tr>
+            <td>Thursday</td>
+            <td colspan="2">DSA</td>
+            <td>C++</td>
+            <td>DBMS</td>
+        </tr>
+        <tr>
+            <td>Friday</td>
+            <td>AOSC</td>
+            <td>OOSDs</td>
+            <td>DAA</td>
+            <td>FSD</td>
+        </tr>
+    </table>
 </body>
 </html>
