--- a/Day3/form.html
+++ b/Day3/form.html
@@ -10,31 +10,34 @@
 <body>
     <header>Registration Form</header>
     <main>
-        <form action="Welcome.html">
+        <form action="./Welcome.html">
             <label for="name">Name:</label>
-            <input type="text" id="name" name="name">
+            <input type="text" id="name" name="name" required>
             <br><br>
             <label for="rollno">Roll No.:</label>
             <input type="text" id="rollno" name="rollno">
             <br><br>
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email">
+            <input type="email" id="email" name="email" required>
             <br><br>
             <label for="Gender">Gender:</label>
             <input type="radio" name="gender" id="male">Male
             <input type="radio" name="gender" id="female">Female
             <br><br>
             <label for="Language">Language:</label>
-            <option value="Select Language">Select Language</option>
-            <option value="Python">Python</option>
-            <option value="c++">c++</option>
-            <option value="java">Java</option>
-            </select>
+            <select name="language" id="language">
+                <option value="Select Language">Select Language</option>
+                <option value="Python">Python</option>
+                <option value="c++">c++</option>
+                <option value="java">Java</option>
 
-            <br>
-            <br>
-            <input type="submit" value="submit">
-            <input type="reset" value="reset">
+            </select>
+            <br><br>
+            <input type="submit" value="Submit">
+            <input type="reset" value="Reset">
+
+
+
         </form>
         <footer>
 
