--- a/Day 4/index.html
+++ b/Day 4/index.html
@@ -11,7 +11,9 @@
 <body>
     <div id="container-box">
         <div class="box">
-            <div class="part">1</div>
+            <div class="part">
+                <img src="https://m.media-amazon.com/images/S/pv-target-images/2edd25ccf27a0339a8714aa9ad345f0fe9e267ed9092d168503936eb4153e8fe.jpg" alt="">
+            </div>
             <div class="part">2</div>
         </div>
         <div class="box">
