--- a/Day5/index.html
+++ b/Day5/index.html
@@ -4,36 +4,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gridwork</title>
     <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <header id="head">
-        <p>Amazon Webpage</p>
+        <p>Amazon webpage</p>
     </header>
+
     <main>
         <div id="container-box">
             <div class="box">
-                <div class="part">1.1</div>
                 <div class="part">1.2</div>
+                <div class="part">1.1</div>
                 <div class="part">1.3</div>
                 <div class="part">1.4</div>
             </div>
-            <div class=" box ">2</div>
-            <div class="box ">3</div>
-            <div class="box ">4</div>
-            <div class="box ">5</div>
-            <div class="box ">6</div>
+            <div class="box">2</div>
+            <div class="box">
+                <div class="part">3.2</div>
+                <div class="part">3.1</div>
+                <div class="part">3.3</div>
+                <div class="part">3.4</div>
+            </div>
+            <div class="box">
+                <div class="part">4.2</div>
+                <div class="part">4.1</div>
+                <div class="part">4.3</div>
+                <div class="part">4.4</div>
+            </div>
+            <div class="box">5</div>
+            <div class="box">6</div>
         </div>
     </main>
-    <footer id="footer ">
-        <p>
-            Copyright Akash Anand,ABESEC 2027
-        </p>
+    <footer id="footer">
+        <p>Copyright Aayush Pandey ABESEC 2027</p>
     </footer>
 </body>
-
-</html>
 
 </html>
