--- a/Day8/index.html
+++ b/Day8/index.html
@@ -7,8 +7,13 @@
     <title>Document</title>
 </head>
 
-<body>
-    <script src="restparameter.js"></script>
+<body bgcolor="beige">
+    <label for="dob">DOB:</label>
+    <input type="date" name="dob" id="dob">
+    <br><br>
+    <div id="output"></div>
+    <input type="button" value="Generate Age" id="btn">
+    <script src="index3.js"></script>
 </body>
 
 </html>
